--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -10,5 +10,7 @@ set -sa terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 # Support colors for undercurl
 set -sa terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
+set -s escape-time 0
+
 # Reload tmux configuration
 bind C-r source-file ~/.tmux.conf \; display "tmux.conf is Reloaded!"
